Add .gitignore and pubspec.yaml for project setup and dependency management

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,11 @@ jobs:
           sdk: stable
 
       - name: Install dependencies
-        run: dart pub get
+        run: |
+          # Ensure we're in the right directory
+          ls -la
+          dart pub get
+        shell: bash
 
       - name: Compile executable
         run: dart compile exe book_management.dart -o ${{ matrix.output_name }}
